syntax = "proto3";

package ai.metathings.service.deviced;

option go_package = "deviced";

import "google/protobuf/wrappers.proto";

import "validate/validate.proto";

import "model.proto";

message PushFrameToFlowRequest {
	message Config {
		OpDevice device = 1;
		google.protobuf.BoolValue config_ack = 2;
		google.protobuf.BoolValue push_ack = 3;
	}

	google.protobuf.StringValue id = 1 [(validate.rules).message.required = true];
	oneof request {
		Config config = 2;
		OpFrame frame = 3;
	}
}

message PushFrameToFlowResponse {
	message Ack {}

	string id = 1;
	oneof response {
		Ack ack = 2;
	}
}
